# FixFlow-AI

./: .gitignore  main.py  playground.py  pyproject.toml
.github/workflows/: semgrep.yml
app/actions/: action_engine.py
app/agents/: agent.py  state.py
app/api/: webhook.py
app/config/: settings.py
app/llm/: clients.py
app/mcp/: client.py  executor.py  github_client.py  manager.py  result_formatter.py  tool_filter.py  tool_registry.py
app/observations/: action_get.py  base.py  extractor.py  registry.py
app/orchestrator/: workflow_orchestrator.py
app/planner/: planner.py
app/prompts/: builder.py  planner_prompts.py  prompts.py
app/services/: github_service.py
